# parcel_sorting_car

./: 2816269Z_ZHANG_ZEYU.xlsx  CMakeLists.txt  CODE_OF_CONDUCT.md  DetectQR.cpp  LICENSE  QR code  QR.cpp  QR.h  QR.java  QRCode Detector.cpp  QRCodeScanner.cpp  QRCodeScanner.h  README.md  Version1.cpp  barcodemaker.cpp  camera,cpp  camera.cpp  climate change.docx  control.cpp  control.h  control.txt  decision_maker.cpp  driver_control.cpp  main.cpp  main_1.cpp  new.txt  qr.cpp  qr_generation.cpp  state_machine.cpp  state_machine.h  steering.txt  time.cpp  time.h  timer.cpp  untitled.m  新建 文本文档.txt  要去浪个人信息采集（学生）.docx
Images/: Intro
test/: Intro  QR.cpp  control.cpp  control_test.cpp  state_machine.cpp  test_qr.cpp  test_state_machine.cpp  time.cpp
